[project]
name = "harlequin-risingwave"
dynamic = ["version"]
description = "A Harlequin adapter for Risingwave."
authors = [{ name = "ZhengYu, Xu", email = "zen-xu@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "harlequin>=2.5",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "harlequin-postgres>=1.3",
]

[project.entry-points."harlequin.adapter"]
risingwave = "harlequin_risingwave:HarlequinRisingwaveAdapter"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
select = ["A", "B", "E", "F", "I"]
target-version = "py39"

[tool.mypy]
python_version = "3.9"
show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
strict_optional = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

no_implicit_reexport = true
strict_equality = true
